--- a/python_packaging.html
+++ b/python_packaging.html
@@ -10,6 +10,7 @@
     <main>
         <h1>Packaing Python Applications</h1>
         <p>This is an explanation of how to package Python applications.</p>
+        <p>Additional info goes here.</p>
     </main>
 </body>
 
