Change to coming soon

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>Oliver's Blog</title>
+    <title>Olly's Blog</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 
 <body>
     <main>
-        <h1>Oliver Higgs</h1>
+        <h1>Olly's Blog</h1>
         <ul>
             <li><a href="python_packaging.html">Packaging Python Applications</a> (6 Aug 2023)</li>
         </ul>
