--- a/python_packaging.html
+++ b/python_packaging.html
@@ -8,10 +8,8 @@
 
 <body>
     <main>
-        <h1>Packaing Python Applications</h1>
-        <p>This is an explanation of how to package Python applications.</p>
-        <p>Additional info goes here.</p>
-        <p>And here.</p>
+        <h1>Packaging Python Applications</h1>
+        <p>Coming soon...</p>
     </main>
 </body>
 
